--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,8 +1,11 @@
 <div class="input-container">
   <input
-    [type]="type"
-    [placeholder]="placeholder"
-    [(ngModel)]="value"
-    class="input-field" />
+  [type]="type"
+  [placeholder]="placeholder"
+  [(ngModel)]="value"
+  (ngModelChange)="onValueChange($event)"
+  (keyup.enter)="onEnter()"
+  class="input-field" />
   <img *ngIf="icon" [src]="icon" alt="Icon" class="input-icon" />
 </div>
+
