--- a/src/app/book/book.component.scss
+++ b/src/app/book/book.component.scss
@@ -1,119 +1,52 @@
-p {
-  max-width: 1100px;
-  font-size: 16px;
-  text-align: justify;
+.book-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 40px;
+  margin-top: -120px;
+  margin-left: -30px;
 }
 
 .collection-item {
-  width: 1090px;
-  padding: 15px;
+  width: 100%;
+  padding: 20px;
   margin-bottom: 40px;
   border-radius: 20px;
 }
 
-.search-highlight {
-  padding: 0 2px;
-  border-radius: 4px;
-  color: white;
-  background-color: #007bff;
-  transition: background-color 0.3s ease;
-
-  &.active {
-    color: #ffffff;
-    background-color: #007bff;
-  }
+.pdf-container,
+.text-container {
+  width: 100%;
+  height: 100vh;
+  margin: -20px;
 }
 
-.actions {
-  position: fixed;
-  right: 70px;
-  bottom: 130px;
-  z-index: 1000;
-  display: flex;
-  align-items: center;
+.text-container p {
+  font-size: 18px;
+  line-height: 1.8;
+  text-align: justify;
+}
+
+.pdf-container iframe {
+  width: 90%;
+  height: 110%;
   border: none;
-  gap: 10px;
-
-  button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border: none;
-    border-radius: 50%;
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #007bff;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-
-    &:hover {
-      background-color: #0056b3;
-    }
-  }
-
-  .search-wrapper {
-    display: flex;
-    align-items: center;
-    padding: 5px 10px;
-    border-radius: 10px;
-    background: #007bff;
-    gap: 5px;
-
-    input {
-      width: 150px;
-      padding: 5px 10px;
-      border: none;
-      border-radius: 8px;
-      outline: none;
-      color: #ffffff;
-      background-color: #007bff;
-      caret-color: white;
-
-      &::placeholder {
-        color: rgba(255, 255, 255, 0.8);
-      }
-
-      &:focus {
-        outline: none;
-        box-shadow: none;
-      }
-    }
-
-    button {
-      width: 30px;
-      height: 30px;
-      border: none;
-      border-radius: 50%;
-      font-size: 16px;
-      color: #ffffff;
-      background-color: #007bff;
-      cursor: pointer;
-      transition: background-color 0.2s ease;
-
-      &:hover {
-        background-color: #0056b3;
-      }
-    }
-
-    .search-result {
-      font-size: 15px;
-      color: #ffffff;
-    }
-  }
 }
 
-.pdf-link {
-  display: inline-block;
-  padding: 8px 14px;
-  margin: 10px 0;
-  border-radius: 8px;
-  text-decoration: none;
-  background-color: #007bff;
-  transition: background-color 0.2s;
+.local-back-button {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  z-index: 10;
+  padding: 5px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
 
-  &:hover {
-    background-color: #0056b3;
+  img {
+    width: 40px;
+    height: 40px;
   }
 }
