--- a/src/app/exam-details/exam-details.component.scss
+++ b/src/app/exam-details/exam-details.component.scss
@@ -170,20 +170,20 @@
 
   input {
     width: 60px;
-    height: 40px;           // ista visina kao dugmad
-    padding: 0;             // uklanjanje dodatnog paddinga
+    height: 40px;
+    padding: 0;
     margin-right: 15px;
     border: 1px solid #cfd8ef;
     border-radius: 10px;
     font-size: 14px;
-    font-weight: bold;      // bolji vizuelni izgled
-    line-height: 40px;      // vertikalno centriranje teksta
+    font-weight: bold;
+    line-height: 40px;
     text-align: center;
   }
 
   button {
-    height: 40px;           // ista visina kao input
-    padding: 0 12px;        // horizontalni padding
+    height: 40px;
+    padding: 0 12px;
     border: none;
     border-radius: 30px;
     font-size: 14px;
@@ -208,7 +208,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); // tamna pozadina preko cele stranice
+  background-color: rgba(0, 0, 0, 0.5);
 
   .popup {
     display: flex;
@@ -222,7 +222,7 @@
     font-size: 20px;
     font-weight: bold;
     color: #0a2b63;
-    background-color: white; // popup kutija
+    background-color: white;
     text-align: center;
 
     p {
