--- a/src/app/flashcards-main/flashcards-main.component.scss
+++ b/src/app/flashcards-main/flashcards-main.component.scss
@@ -5,16 +5,16 @@
   gap: 20px;
 
   .plus-item-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 250px;
     height: 150px;
-    border-radius: 30px;
-    background-color: #D8E8FF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    cursor: pointer;
     margin-bottom: 30px;
+    border-radius: 30px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #d8e8ff;
+    cursor: pointer;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 
     img {
@@ -23,8 +23,8 @@
     }
 
     &:hover {
-      transform: scale(1.00);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      transform: scale(1);
     }
   }
 }
@@ -36,22 +36,22 @@ p {
 
 .actions {
   display: flex;
-  gap: 15px;
-  margin-top: 20px;
   justify-content: flex-end;
+  margin-top: 20px;
+  gap: 15px;
 
   .delete-mode-btn,
   .confirm-delete-btn {
-    background-color: #2C80FC;
+    padding: 15px 35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border: none;
     border-radius: 30px;
-    padding: 15px 35px;
     font-weight: 600;
+    color: var(--white);
+    background-color: #2c80fc;
     cursor: pointer;
     transition: background-color 0.2s ease;
-    color: var(--white);
-    margin-bottom: 20px;
-    margin-top: 20px;
 
     &:hover {
       background-color: #3c8afe;
@@ -78,22 +78,21 @@ p {
 
 .flashcard-set {
   position: relative;
-  background-color: var(--white);
-  border-radius: 16px;
-  width: 250px;
-  height: 150px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  cursor: pointer;
+  align-items: center;
+  width: 250px;
+  height: 150px;
+  border-radius: 16px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  background-color: var(--white);
+  cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease, outline 0.2s ease;
 
   &:hover {
     transform: translateY(-5px);
   }
-
 
   &.delete-mode {
     outline: 5px solid #66a3ff;
@@ -124,7 +123,7 @@ p {
       margin-top: 8px;
       font-size: 15px;
       font-weight: 500;
-      color: #333;
+      color: #333333;
     }
   }
 }
