--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,37 +1,53 @@
 <div class="square">
-
   <div class="left-side">
-
     <h2 class="subtitle">Dobrodošli na Academus</h2>
 
     <div class="form">
-      <div class="input-container">
+
+      <div class="input-container" [class.invalid]="emailError">
+        <label *ngIf="emailError" class="error-label">{{ emailError }}</label>
+        <i class="fa fa-envelope icon left-icon"></i>
         <input
           type="email"
           [(ngModel)]="model.email"
           placeholder="Unesite Vašu Email Adresu"
-          class="input-field" />
+          class="input-field"
+        />
       </div>
-      <div class="input-container">
+
+      <div class="input-container" [class.invalid]="passwordError">
+        <label *ngIf="passwordError" class="error-label">{{ passwordError }}</label>
+        <i class="fa fa-lock icon left-icon"></i>
         <input
-          type="password"
+          [type]="showPassword ? 'text' : 'password'"
           [(ngModel)]="model.password"
           placeholder="Unesite Lozinku"
-          class="input-field" />
+          class="input-field"
+        />
+        <i
+          class="fa icon right-icon"
+          [ngClass]="showPassword ? 'fa-eye' : 'fa-eye-slash'"
+          (click)="togglePassword()"
+        ></i>
       </div>
+
       <div class="buttons">
         <button class="primary" (click)="login()">Prijavi se</button>
       </div>
-      <p class="signup-text">Nemate nalog?
+
+      <p class="signup-text">
+        Nemate nalog?
         <span class="signup-link" (click)="goToSignUp()">Registrujte se</span>
       </p>
-      <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
-    </div>
 
+      <div *ngIf="generalError" class="error-box animate">
+        <i class="fa fa-exclamation-circle"></i>
+        <span>{{ generalError }}</span>
+      </div>
+    </div>
   </div>
 
   <div class="right-side">
-    <img src="assets/images/login-image.jpg" alt="Slika" class="side-image" />
+   <img src="assets/images/login-image.jpg" alt="Slika" class="side-image" />
   </div>
-
 </div>
