--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,25 +1,39 @@
 <la-square>
-
+  <la-message></la-message>
   <la-header title="Profil" [backRoute]="'/ucenje'"></la-header>
 
   <div class="profil-container">
-    <div class="profil-info">
+
+    <div class="profil-card avatar-card">
       <div class="avatar-wrapper">
         <img [src]="avatarUrl" class="avatar" alt="Avatar">
-        <label class="edit-avatar">
+        <label class="edit-avatar" title="Promeni avatar">
           ✎
           <input type="file" (change)="onAvatarChange($event)" hidden>
         </label>
       </div>
-      <input type="text"
-        [value]="nickname"
-        (input)="onNicknameChange($event)"
-        placeholder="Unesi nadimak"
-        class="nickname-input"
-      >
+      <p class="user-name">{{ ime }}</p>
+
+      <div class="profil-card user-info-card">
+        <div class="info-field">
+          <strong>Email:</strong>
+          <input type="text" [(ngModel)]="loggedUser.email" placeholder="Unesi email">
+        </div>
+
+        <div class="info-field">
+          <strong>Lozinka:</strong>
+          <div class="password-wrapper">
+            <input [type]="showPassword ? 'text' : 'password'" [(ngModel)]="loggedUser.password" placeholder="Unesi lozinku">
+            <button type="button" (click)="togglePassword()" class="toggle-pass">
+              <i class="fa" [ngClass]="showPassword ? 'fa-eye-slash' : 'fa-eye'"></i>
+            </button>
+          </div>
+        </div>
+
+        <button (click)="saveProfile()">Sačuvaj</button>
+      </div>
+
     </div>
+
   </div>
-
-
-
 </la-square>
