--- a/src/app/profil/profil.component.scss
+++ b/src/app/profil/profil.component.scss
@@ -1,79 +1,124 @@
 .profil-container {
   display: flex;
   flex-direction: column;
-  margin: auto;
   align-items: center;
-  gap: 35px;
+  max-width: 500px;
   width: 100%;
-  max-width: 600px;
-  padding: 30px;
-  border-radius: 16px;
- 
+  margin: auto;
+  text-align: left;
+  gap: 20px;
 }
 
-.profil-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
+.profil-card {
+  width: 100%;
+  padding: 25px 20px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  transition: all 0.3s;
+}
 
-  .avatar-wrapper {
-    position: relative;
-    width: 140px;
-    height: 140px;
+.avatar-wrapper {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  margin: auto;
 
-    .avatar {
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid #2C80FC;
-      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+  .avatar {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 4px solid #2c80fc;
+    border-radius: 50%;
+  }
+
+  .edit-avatar {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: white;
+    background: #2c80fc;
+    cursor: pointer;
+
+    &:hover {
+      background: #3c87f7;
+      transform: scale(1.1);
     }
+  }
+}
 
-    .edit-avatar {
+.user-name {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.user-info-card {
+  margin-top: 20px;
+
+  .info-field {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    font-size: 14px;
+
+    input {
+      width: 100%;
+      padding: 15px 45px 15px 12px;
+      border: 1px solid #cccccc;
+      border-radius: 60px;
+      font-size: 14px;
+    }
+  }
+
+  .password-wrapper {
+    position: relative;
+
+    .toggle-pass {
       position: absolute;
-      bottom: 0;
-      right: 0;
-      width: 38px;
-      height: 38px;
-      border-radius: 50%;
-      background-color: #2C80FC;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #fff;
+      top: 30%;
+      right: 1px;
+      border: none;
+      font-size: 18px;
+      color: #2c80fc;
+      background: none;
       cursor: pointer;
-      border: 2px solid #fff;
-      font-size: 16px;
-      transition: background-color 0.2s;
+      transform: translateY(-50%);
 
       &:hover {
-        background-color: #3c87f7;
+        color: #3c87f7;
       }
     }
-  }
 
-  .nickname-input {
-    width: 200px;
-    padding: 10px 14px;
-    border-radius: 32px;
-    background-color: transparent;
-    border: 1px solid #ccc;
-    text-align: center;
-    font-size: 15px;
-    transition: border-color 0.2s;
-
-    &:focus {
-      border-color: #4a90e2;
-      outline: none;
+    input {
+      padding-right: 45px;
+      margin-bottom: 20px;
     }
   }
 
-  .profile-name {
-    font-size: 20px;
-    font-weight: 600;
-    color: #333;
-    margin-top: 10px;
+  button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 13px 30px;
+    margin: 0 auto;
+    margin-top: 5px;
+    border: none;
+    border-radius: 25px;
+    color: white;
+    background-color: #2c80fc;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+      background-color: #3c87f7;
+      transform: translateY(-2px);
+    }
   }
 }
