--- a/src/app/pomodoro/pomodoro.component.html
+++ b/src/app/pomodoro/pomodoro.component.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="controls">
-        <button  (click)="startPauseTimer()">{{ timerRunning ? 'Pause' : 'Start' }} </button>
+        <button class="btn"  (click)="startPauseTimer()">{{ timerRunning ? 'Pause' : 'Start' }} </button>
         <button (click)="resetTimer()">Reset</button>
       </div>
     </div>
