--- a/src/app/pomodoro/pomodoro.component.scss
+++ b/src/app/pomodoro/pomodoro.component.scss
@@ -188,8 +188,8 @@
 
   .info-tooltip {
     position: absolute;
-    bottom: 0;
-    left: 1130px;
+    bottom: 10px;
+    left: 1113px;
     width: 50px;
     height: 50px;
     padding: 10px;
