--- a/src/app/shared/input/input.component.scss
+++ b/src/app/shared/input/input.component.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 110%;
   height: 45px;
-  padding: 0 12px;
+  padding: 0;
   border-radius: 30px;
   background-color: #f1f1f1;
 }
@@ -11,7 +11,7 @@
   text-align: left;
   align-items: flex-start;
   height: 100%;
-  padding: 0 772px 0 22px;
+  padding: 0 820px 0 0;
   border: none;
   outline: none;
   font-size: 16px;
