--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper-welcome">
   <div class="header">
     <img src="assets/images/people-photo.png" alt="people">
     <p>Korisnika mesečno</p>
