--- a/src/app/shared/input/input.component.scss
+++ b/src/app/shared/input/input.component.scss
@@ -21,7 +21,7 @@
 .input-icon {
   position: absolute;
   top: 50%;
-  right: 20px;
+  left: 20px;
   display: block;
   width: 18px;
   height: 18px;
